--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,8 @@
 .prenav_main {
   color: white;
   font-size: 14px;
+  transition: color ease-in-out 0.3s;
+  cursor: pointer;
 }
 
 .prenav_main:hover {
@@ -24,6 +26,7 @@
 }
 
 .prenav_social a {
+  transition: color ease-in-out 0.3s;
   color: white;
 }
 
@@ -85,6 +88,11 @@
   text-decoration: none;
   display: block;
   width: 100%;
+  transition: color ease-in-out 0.3s;
+}
+
+.navbarmenu li a:hover {
+  color: #f6b60b;
 }
 
 @media screen and (max-width: 1000px) {
@@ -109,7 +117,10 @@
 
   .navbarmenu li {
     text-align: center;
-    margin: 0;
+    margin-right: 1;
+    margin-left: 1;
+    transition: background-color ease-in 0.2s;
+    border-radius: 1cm;
   }
 
   .navbarmenu li a {
@@ -119,7 +130,7 @@
   }
 
   .navbarmenu li:hover {
-    background-color: lightgray;
+    background-color: #16A085;
   }
 
   .navbarmenu.extend ul {
@@ -137,34 +148,46 @@
   flex-direction: column;
 }
 
-/* About Us */
-
-.aboutusheader {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 90px;
+.carouseltitle {
+  font: 400 30px "Roboto", sans-serif;
 }
 
+.carouselbutton {
+  background-color: #f6b60b;
+  height: 60px;
+  width: 185px;
+  transition: background-color ease-in-out 0.3s;
+}
+
+.carouselbutton b {
+  color: black;
+  font-size: large;
+}
+
+.carouselbutton:hover {
+  background-color: white;
+}
+ 
+/* About Us */
+
+
 .aboutusbody {
-  margin-top: 90px;
   display: flex;
   flex-direction: row;
 }
 
 .aboutusmain {
-  flex: 60%
+  flex: 55%
 }
 
 .aboutusshort {
-  flex: 40%;
+  flex: 35%;
+  margin-left: 3rem;
 }
 
 .aboutuslicencee {
   margin-top: 40px;
   margin-bottom: 40px;
-  border-width: 2px;
 }
 
 /* What we offer page */
@@ -250,4 +273,19 @@
   align-items: center;
   justify-content: space-evenly;
   
+}
+
+/* global styles */
+
+.globalSubheaderTitle {
+  font: 400 24px "Oswald", sans-serif;
+}
+
+.globalSubheader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 90px;
+  margin-bottom: 90px;
 }
