--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,9 @@
   background-color: #16A085;
   padding-top: 12px;
   padding-bottom: 12px;
-  gap: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  gap: 30px;
 }
 
 .prenav_main {
@@ -229,15 +231,16 @@
 }
 
 .FAQimg {
-  display: flex;
   flex-direction:column;
-  flex: 50%
+  flex: 50%;
 }
 
 .FAQtext {
   flex: 50%;
   display: flex;
   flex-direction: column;
+  font: 400 14px/26px "Roboto", sans-serif;
+  color: #555555;
 }
 
 /* Licence */
